update About.css by hidding overflow in parent container to correct x-overflow on mobile devices

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -4,7 +4,7 @@
 }
 
 #about__container {
-  width: 100%;
+  overflow: hidden;
 }
 
 #headshot {
@@ -28,5 +28,6 @@ p {
 @media only screen and (max-width: 600px) {
   #skills__table__col {
     margin-top: 100px;
+    margin-left: 0px;
   }
 }
